<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EthioRental</string>
    <string name="title_activity_machine_maps">Map</string>
    <string name="open" tools:ignore="MissingTranslation">Open</string>
    <string name="close" tools:ignore="MissingTranslation">Close</string>
    <string name="select_lang">Select Language!</string>
    <string name="welcome_text">Welcome House Rental</string>
    <string name="sign_text">Signing In...</string>
    <string name="username_or_phone">User Name or phone</string>
    <string name="password">Password</string>
    <string name="sign_In_text">Sign In</string>
    <string name="sign_Up_text">Sign Up</string>
    <string name="go_to_sign_up">Don\'t Have an Account? Register Here</string>
    <string name="user_name_text">User Name</string>
    <string name="phone_txt">Phone</string>
    <string name="go_to_sign_in">Already Have and Account? Login Here</string>
    <string name="view_owner">View Owner</string>
    <string name="owned_by">Owned By</string>
    <string name="house_rental_txt">House Rental</string>
    <string name="slide_txt">Slide to see more pics!</string>
    <string name="search_txt">Search</string>
    <string name="home_reg_txt">House Registration</string>
    <string name="property_type_txt">Property Type</string>
    <string name="bed_room_txt">Bed Rooms</string>
    <string name="cons_type_txt">Construction Type</string>
    <string name="serv_type_txt">Service Type</string>
    <string name="half_bathroom_txt">Half Bathroom</string>
    <string name="full_bathroom_txt">Full Bathroom</string>
    <string name="server_quarter_txt">Servant Quarter</string>
    <string name="serv_quar_bath_txt">Servant Quarter Bathroom</string>
    <string name="modern_kitchen_txt">Modern Kitchen Available?</string>
    <string name="parking_sp_txt">Parking Space</string>
    <string name="water_tank_txt">Is Water Tank Available</string>
    <string name="generater_txt">Is Generator Available</string>
    <string name="built_year_txt">Built Year</string>
    <string name="house_price_txt">House Price</string>
    <string name="additional_txt">Insert Additional Information</string>
    <string name="picture_txt">Insert Picture for House</string>
    <string name="browse_txt">Browse</string>
    <string name="more_pick">Add More Picture</string>
    <string name="reg_txt">Register</string>
    <string name="reg_home_txt">Register Home</string>
    <string name="serch_home">Search Home</string>
    <string name="view_all_txt">View All Home</string>
    <string name="share_to_other">Share to Others</string>
    <string name="send_txt">Send</string>
    <string name="share_txt">Share</string>
    <string name="gen_info">General Info</string>
    <string name="email_txt">Mail</string>
    <string name="about_us_txt">About us</string>
    <string name="logout_txt">Logout</string>
    <string name="contact">Contact Owner</string>
    <string name="currency">ETB</string>
    <string name="price">Price</string>
    <string name="builting_square_meter">Building Square Meter</string>
    <string name="compound_square_meter">Compound Square Meter</string>
    <string name="wood_mud">Wood and mud</string>
    <string name="wood_mud_stucco">Wood and mud + Stucco</string>
    <string name="myson_stone">Maison/stone</string>
    <string name="cement_stucco">Cement Blocks + Stucco</string>
    <string name="poured_concrete">Poured Concrete</string>
    <string name="studio_txt">Studio</string>
    <string name="one_bedroom_txt">1 Bedroom</string>
    <string name="two_bedroom_txt">2 Bedroom</string>
    <string name="three_bedroom_txt">3 Bedroom</string>
    <string name="four_bedroom_txt">4 Bedroom</string>
    <string name="five_bedroom_txt">5 Bedroom</string>
    <string name="six_bedroom_txt">6 Bedroom</string>
    <string name="seven_bedroom_txt">7 Bedroom</string>
    <string name="eight_bedroom_txt">8 Bedroom</string>
    <string name="nine_bedroom_txt">9 Bedroom</string>
    <string name="ten_and_above_bedroom_txt">10 and above</string>
    <string name="for_rent">For Rent</string>
    <string name="for_sale">For Sale</string>
    <string name="house_for_what">You want House:</string>
    <string name="continue_txt">Continue</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>

    <string name="parking_one_txt">1 Parking Space</string>
    <string name="parking_two_txt">2 Parking Spaces</string>
    <string name="parking_three_txt">3 Parking Spaces</string>
    <string name="parking_four_txt">4 Parking Spaces</string>
    <string name="parking_five_txt">5+ Parking Spaces</string>

    <string name="zero_half_bathroom_txt">0 Half Bathroom</string>
    <string name="one_half_bathroom_txt">1 Half Bathroom</string>
    <string name="two_half_bathroom_txt">2 Half Bathrooms</string>

    <string name="one_full_bathroom_txt">1 Full Bathroom</string>
    <string name="two_full_bathroom_txt">2 Full Bathrooms</string>
    <string name="three_full_bathroom_txt">3 Full Bathrooms</string>
    <string name="four_full_bathroom_txt">4 Full Bathrooms</string>
    <string name="five_full_bathroom_txt">5 Full Bathrooms</string>
    <string name="six_full_bathroom_txt">6+ Full Bathrooms</string>

    <string name="one_room_txt">1 Room</string>
    <string name="two_room_txt">2 Rooms</string>
    <string name="three_room_txt">3 Rooms</string>
    <string name="four_room_txt">4 Rooms</string>

    <string name="one_bathroom_txt">1 Bathroom</string>
    <string name="two_bathroom_txt">2 Bathroom</string>

    <string name="single_family_txt">Single Family</string>
    <string name="twines_home">Twine Homes</string>
    <string name="town_homes_txt">Town Homes</string>
    <string name="apartment">Apartment</string>
    <string name="condo_txt">Condominiums</string>
    <string name="commercial_space_txt">Commercial Space</string>
    <string name="office_space_txt">Office Space</string>
    <string name="lang_lot_txt">Land/lot</string>

    <string name="subject_email_txt">Subject of email</string>
    <string name="email_body">Body of the email</string>
    <string name="sending_email_txt">Send mail...</string>

    <string name="house_info_txt">House Information</string>
    <string name="house_profile_txt">House Profile</string>
    <string name="click_here_txt">Click the image to see more pics!</string>
    <string name="house_list_txt">House List</string>
    <string name="wait_text">Wait...</string>
    <string name="endof_page_txt">End of Photo</string>
    <string name="nav_activate_service">Activate Service</string>
    <string name="no_such_phone_num">No such Phone Number exists</string>
    <string name="con_ok_message">Try again</string>
    <string name="profie_txt">Profile</string>
    <string name="activate_service_txt">Activated Service</string>
    <string name="not_activated_txt">Service Not Activated</string>
    <string name="user_welCome_txt">Welcome </string>
    <string name="gallery_header_txt">Please Select House Pictures</string>
    <string name="change_lang">Change Language</string>
    <string name="click_to_change_lang">Engish Afaan Oromoo \n አማርኛ </string>
    <string name="number_of_rent">Houses are available for Rent</string>
    <string name="number_of_sale">Houses are available for sale</string>
    <string name="add_home_here">Click here to register house for rent or sale</string>
    <string name="update_home">Update Home</string>
    <string name="yemikeray">For Rent</string>
    <string name="yemishet">For Sale</string>
    <string name="click_to_view_all">Click here to view available House</string>
    <string name="max_price_txt">Max Price</string>
    <string name="min_price_txt">Min Price</string>
    <string name="filter_txt">Filter</string>
    <string name="main_home">Home</string>
    <string name="no_house_txt">No Home For Sale With This Criteria</string>
    <string name="no_houseforrent_txt">No Home For Rent With This Criteria</string>
    <string name="ware_house_text">Warehouse</string>
    <string name="end_broak_txt">End Broking</string>
    <string name="ok_txt">Ok</string>
    <string name="cancel_txt">Cancel</string>
    <string name="enable_loc_txt">Enable Location</string>
    <string name="insert_info">Please Insert Necessary Information First</string>
    <string name="select_photo">Please Select Photo</string>
    <string name="app_label">House Rental</string>
    <string name="con_check_message">No, Connection! Please Turn on Your Internet and Retry</string>
    <string name="activate_house_again">Deactivated House</string>
    <string name="activate_txt">Activate The House</string>
    <string name="title_activity_machinary" translatable="false">Map</string>
    <string name="mach_registration">Register Machinery</string>
    <string name="search_machinary">Search Machinery</string>
    <string name="view_all_machinery">View All Machinery</string>
    <string name="activate_machinery">Activate The Machinery</string>
    <string name="update_machinery">Update Machinery</string>
    <string name="click_to_view_all_machinary">Click here to view available Machinery</string>
    <string name="no_of_machninery">Machinery Available</string>
    <string name="machinery_type_txt">Machinery Type</string>
    <string name="machinery_price_txt">Machinery Price</string>
    <string name="is_driver_available">With Driver?</string>
    <string name="machine_model">Machinery Model</string>
    <string name="machine_with_what">Machinery with Driver?</string>
    <string name="list_of_machinery">List of Machinery</string>
    <string name="profile_of_machinery">Machinery Profile</string>
    <string name="machinery_own_name">Contact Machinery Owner</string>
    <string name="please_click_search">please click the search button at the top if you don\'t see map</string>
</resources>
