<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/navigation_main"
      android:icon="@drawable/ic_home_black_24dp"
      android:title="@string/main_home" />
  <item
      android:id="@+id/navigation_home"
      android:icon="@drawable/ic_view_list_black_24dp"
      android:title="@string/view_all_txt" />

  <item
      android:id="@+id/navigation_dashboard"
      android:icon="@drawable/ic_search_black_24dp"
      android:title="@string/search_txt" />
  <!--
      <item
          android:id="@+id/navigation_notifications"
          android:icon="@drawable/ic_attach_money_black_24dp"
          android:title="notifications" />
  !-->
  <item
      android:id="@+id/navigation_profile"
      android:icon="@drawable/ic_person_white_24dp"
      android:title="@string/profie_txt" />

</menu>
