<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ChangeLanguage">

    <LinearLayout
        android:id="@+id/mainactivitylayout"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_above="@id/mainactivitylayout"
            android:id="@+id/welcome"
            android:text="@string/welcome_text"
            android:textStyle="italic"
            android:visibility="gone"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:src="@drawable/house_ic_cool"
            tools:ignore="ContentDescription" />
        <Button
            android:layout_marginTop="30dp"
            android:fontFamily="cursive"
            android:background="@android:color/holo_orange_light"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnSelectLanguage"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_lang"
            />



        <TextView
            android:textStyle="italic"
            android:textColor="@android:color/holo_blue_dark"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_for_what"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />
        <RadioGroup
            android:layout_gravity="center"
            android:id="@+id/radioGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/forRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_rent"
                />
            <RadioButton
                android:id="@+id/forSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_sale"
                />

        </RadioGroup>
        <Button
            android:id="@+id/btnContinue"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient"
            android:clickable="false"
            android:padding="16dp"
            android:text="@string/continue_txt"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            />
    </LinearLayout>
</RelativeLayout>